--- a/react-components/package.json
+++ b/react-components/package.json
@@ -17,6 +17,12 @@
   },
   "homepage": "https://github.com/pavelhancharow/RSSchool-REACT2021Q3#readme",
   "devDependencies": {
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
