--- a/react-components/package.json
+++ b/react-components/package.json
@@ -22,8 +22,10 @@
     "@types/react-dom": "^17.0.9",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^3.11.5",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "fork-ts-checker-webpack-plugin": "^6.2.13",
     "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.1.0",
     "ts-loader": "^9.2.4",
     "ts-node": "^10.1.0",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
