--- a/react-components/package.json
+++ b/react-components/package.json
@@ -29,6 +29,7 @@
     "fork-ts-checker-webpack-plugin": "^6.2.13",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.1.0",
+    "prettier": "^2.3.2",
     "ts-loader": "^9.2.4",
     "ts-node": "^10.1.0",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
