--- a/react-components/.eslintrc.json
+++ b/react-components/.eslintrc.json
@@ -11,6 +11,7 @@
     "browser": true
   },
   "extends": [
+    "airbnb-typescript",
     "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
     "plugin:prettier/recommended"
