--- a/react-components/package.json
+++ b/react-components/package.json
@@ -28,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^6.2.0",
     "eslint": "^7.31.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
@@ -39,11 +40,15 @@
     "fork-ts-checker-webpack-plugin": "^6.2.13",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.1.0",
+    "node-sass": "^6.0.1",
     "prettier": "^2.3.2",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
     "ts-loader": "^9.2.4",
     "ts-node": "^10.1.0",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.3.5",
+    "url-loader": "^4.1.1",
     "webpack": "^5.47.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
