--- a/react-components/package.json
+++ b/react-components/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/pavelhancharow/RSSchool-REACT2021Q3#readme",
   "devDependencies": {
+    "@types/mini-css-extract-plugin": "^2.0.1",
     "@types/node": "^16.4.5",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
