--- a/react-router/.eslintrc.json
+++ b/react-router/.eslintrc.json
@@ -29,6 +29,7 @@
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
     "react/jsx-filename-extension": [
       "warn",
       {
