--- a/react-redux/package.json
+++ b/react-redux/package.json
@@ -52,10 +52,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
+    "axios": "^0.21.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-transition-group": "^4.4.2"
+    "react-transition-group": "^4.4.2",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0"
   }
 }
